--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Measurement.cshtml
@@ -1004,8 +1004,8 @@
             }
 
 
-            // 計算Diff
-            if (standard.indexOf('/') > -1 || val.toString().indexOf('/') > -1) {
+            // 計算Diff，根據小數或分數使用不同方式計算
+            if (standard.indexOf('/') > -1 || val.toString().indexOf('/') > -1 || tolh.toString().indexOf('/') > -1 || toll.toString().indexOf('/') > -1) {
                 if (standard.toString().indexOf('.') > -1) {
                     return;
                 }
@@ -1304,7 +1304,7 @@
     }
 
     function cal(unit, standard, val, tolh, toll, obj) {
-        if (standard.indexOf('/') > -1) {
+        if (standard.indexOf('/') > -1 || val.indexOf('/') > -1 || tolh.indexOf('/') > -1 || toll.indexOf('/') > -1) {
             if (standard.indexOf('.') > -1) {
                 return;
             }
@@ -1321,7 +1321,7 @@
                 obj.removeClass("red");
             }
         }
-        else {
+        else if (!isNaN(standard) && !isNaN(val)) {
             var sTolh = parseFloat(accAdd(standard, tolh));
             var sToll = parseFloat(accSubtr(standard, toll));
             if (sTolh >= val && val >= sToll) {
