--- a/Quality/Quality/Areas/SampleRFT/Views/Measurement/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/Measurement/Index.cshtml
@@ -283,9 +283,9 @@
             });
         });
 
-        msg.WithInfoTimer("Report Generating...");
-
         $("#ToExcel").click(function () {
+            msg.WithInfoTimer("Report Generating...");
+
             $.ajax({
                 url: "@Url.Action("ToExcel", "Measurement", new { Area = "SampleRFT" })",
                 type: 'POST',
@@ -443,7 +443,7 @@
     }
 
     function cal(unit, standard, val, tolh, toll, obj) {
-        if (standard.toString().indexOf('/') > -1) {
+        if (standard.indexOf('/') > -1 || val.indexOf('/') > -1 || tolh.indexOf('/') > -1 || toll.indexOf('/') > -1) {
             if (standard.toString().indexOf('.') > -1) {
                 return;
             }
@@ -459,7 +459,7 @@
                 obj.removeClass("red");
             }
         }
-        else {
+        else if (!isNaN(standard) && !isNaN(val)) {
             var sTolh = parseFloat(accAdd(standard, tolh));
             var sToll = parseFloat(accSubtr(standard, toll));
             if (sTolh >= val && val >= sToll) {
